--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-oauth2-jwt-bearer": "^1.6.1",
+    "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^2.6.9"
