--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ node_modules/
 .env
 .DS_Store
 public/uploads/ ai-testing-f3b39-firebase-adminsdk-fbsvc-49b85da72e.json
+ai-testing-f3b39-firebase-adminsdk-fbsvc-49b85da72e.json
