--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "dest": "server.js"
     },
     {
+      "src": "/profile",
+      "dest": "/public/profile.html"
+    },
+    {
       "src": "/",
       "dest": "/public/index.html"
     },
