--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,12 @@
       "dest": "server.js"
     },
     {
+      "src": "/profile",
+      "dest": "/public/profile.html"
+    },
+    {
       "src": "/(.*)",
-      "dest": "public/$1"
+      "dest": "/public/$1"
     }
   ]
 } 
